runon/split update

--- a/valkuil.yml
+++ b/valkuil.yml
@@ -55,6 +55,7 @@ modules:
     - id: runon
       module: gecco.modules.spacing.RunOnModule
       freqthreshold: 25
+      partthreshold: 3000
       sources:
         - sources/ValkuilCorpus.tok.txt
       models:
@@ -62,6 +63,7 @@ modules:
     - id: splits
       module: gecco.modules.spacing.SplitModule
       freqthreshold: 25
+      freqratio: 1
       sources:
         - sources/ValkuilCorpus.tok.txt
       models:
