disabling lm and lexicon module by default

--- a/valkuil.yml
+++ b/valkuil.yml
@@ -11,6 +11,7 @@ modules:
       models:
         - models/ValkuilErrors
     - id: lm
+      enabled: false
       module: gecco.modules.lm.TIMBLLMModule
       threshold: 0.9
       #freqthreshold: 20
@@ -24,6 +25,7 @@ modules:
       hapaxmodel: models/ValkuilCorpus.tok.1Mlines.hapax.colibri.patternmodel
       hapaxthreshold: 3
     - id: lexicon
+      enabled: false
       module: gecco.modules.lexicon.LexiconModule
       reversedformat: true
       freqthreshold: 10000
