--- a/valkuil.yml
+++ b/valkuil.yml
@@ -1,5 +1,5 @@
 id: valkuil
-root: /vol/tensusers/proycon/valkuil-gecco 
+root: /vol/tensusers/proycon/valkuil-gecco:/tmp/valkuil-gecco
 language: nl
 threads: 12
 debug: 0
