--- a/valkuil.yml
+++ b/valkuil.yml
@@ -1,6 +1,6 @@
 id: valkuil
 root: /scratch2/www/valkuil-gecco:/vol/tensusers/proycon/valkuil-gecco:/usr/src/valkuil-gecco
-language: nl
+language: nld
 threads: 12
 debug: 0
 modules:
