--- a/valkuil.yml
+++ b/valkuil.yml
@@ -1,5 +1,5 @@
 id: valkuil
-root: /scratch2/www/valkuil-gecco:/vol/tensusers/proycon/valkuil-gecco:/usr/src/valkuil-gecco
+root: /var/www/lamachine/src/valkuil-gecco:/scratch2/www/valkuil-gecco:/vol/tensusers/proycon/valkuil-gecco:/usr/src/valkuil-gecco
 language: nl
 threads: 12
 debug: 0
